--- a/#source/scss/style.scss
+++ b/#source/scss/style.scss
@@ -136,6 +136,7 @@ a {
 @import "main-scss/range-slider.scss";
 
 @import "breadcrumbs.scss";
+@import "pagination.scss";
 @import "product-card.scss";
 
 @import "main-screen.scss";
