--- a/#source/scss/product-card.scss
+++ b/#source/scss/product-card.scss
@@ -149,4 +149,61 @@
 			}
 		}
 	}
+
+	.swiper-button-next {
+		height: fit-content;
+
+		&::after {
+			line-height: 0;
+			content: url(/img/icons/swiper/arr-right.svg);
+		}
+
+		&.swiper-image {
+			width: 2rem;
+			top: 55%;
+			right: 1.5rem;
+
+			&::after {
+				width: 100%;
+				padding: 0.7rem 0.9rem;
+				background-color: $white;
+				border-radius: 50%;
+				font-size: 0;
+				content: url(/img/icons/swiper/arr-small-right.svg);
+			}
+		}
+	}
+
+	.swiper-button-prev {
+		height: fit-content;
+
+		&::after {
+			line-height: 0;
+			content: url(/img/icons/swiper/arr-left.svg);
+		}
+
+		&.swiper-image {
+			width: 2rem;
+			top: 55%;
+			left: 1.5rem;
+
+			&::after {
+				width: 100%;
+				padding: 0.7rem 0.9rem;
+				background-color: $white;
+				border-radius: 50%;
+				font-size: 0;
+				content: url(/img/icons/swiper/arr-small-left.svg);
+			}
+		}
+	}
+
+	.swiper-pagination.swiper-image .swiper-pagination-bullet {
+		background: #FFFFFF;
+		opacity: 0.6;
+
+		&.swiper-pagination-bullet-active {
+			background: #007AFF;
+		}
+	}
 }
