--- a/css/style.css
+++ b/css/style.css
@@ -798,6 +798,7 @@ a:hover {
   opacity: 0;
   width: 100%;
   height: 2.4rem;
+  cursor: pointer;
 }
 .group.check .checkbox + .form-label {
   display: -webkit-inline-box;
@@ -915,7 +916,6 @@ a:hover {
 }
 .btn.blue {
   width: 100%;
-  max-width: 25.4rem;
   background: #519DF0;
   border-radius: 0.8rem;
   padding: 1.8rem 0;
@@ -1012,6 +1012,39 @@ a:hover {
 }
 .breadcrumbs a.cur-page {
   color: #252525;
+}
+
+.pagination .page-item .page-link {
+  min-width: 4rem;
+  height: 4rem;
+  border-radius: 0.8rem;
+  border: 1px solid rgba(85, 83, 83, 0.2);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  outline: none;
+  background: none;
+  color: #555353;
+  font-size: 1.6rem;
+  font-weight: 500;
+}
+.pagination .page-item .page-link:focus {
+  -webkit-box-shadow: none;
+          box-shadow: none;
+}
+.pagination .page-item:not(:last-child) {
+  margin-right: 1.2rem;
+}
+.pagination .page-item.active .page-link {
+  color: #519DF0;
+  background: rgba(81, 157, 240, 0.1);
+  border-color: transparent;
 }
 
 .product-card:hover .bottom-content .block-wrapper:last-of-type h5 {
@@ -1154,6 +1187,57 @@ a:hover {
   font-weight: inherit;
   font-size: inherit;
   line-height: inherit;
+}
+.product-card .swiper-button-next {
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
+  height: fit-content;
+}
+.product-card .swiper-button-next::after {
+  line-height: 0;
+  content: url(/img/icons/swiper/arr-right.svg);
+}
+.product-card .swiper-button-next.swiper-image {
+  width: 2rem;
+  top: 55%;
+  right: 1.5rem;
+}
+.product-card .swiper-button-next.swiper-image::after {
+  width: 100%;
+  padding: 0.7rem 0.9rem;
+  background-color: white;
+  border-radius: 50%;
+  font-size: 0;
+  content: url(/img/icons/swiper/arr-small-right.svg);
+}
+.product-card .swiper-button-prev {
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
+  height: fit-content;
+}
+.product-card .swiper-button-prev::after {
+  line-height: 0;
+  content: url(/img/icons/swiper/arr-left.svg);
+}
+.product-card .swiper-button-prev.swiper-image {
+  width: 2rem;
+  top: 55%;
+  left: 1.5rem;
+}
+.product-card .swiper-button-prev.swiper-image::after {
+  width: 100%;
+  padding: 0.7rem 0.9rem;
+  background-color: white;
+  border-radius: 50%;
+  font-size: 0;
+  content: url(/img/icons/swiper/arr-small-left.svg);
+}
+.product-card .swiper-pagination.swiper-image .swiper-pagination-bullet {
+  background: #FFFFFF;
+  opacity: 0.6;
+}
+.product-card .swiper-pagination.swiper-image .swiper-pagination-bullet.swiper-pagination-bullet-active {
+  background: #007AFF;
 }
 
 .main-screen {
@@ -1888,10 +1972,183 @@ a:hover {
           column-gap: 5.7rem;
 }
 
-.product_list {
+.filter-sidebar .group:not(:last-child) {
+  margin-bottom: 2rem;
+}
+.filter-sidebar .group label {
+  margin-bottom: 1.2rem;
+}
+.filter-sidebar .group .group.check:not(:last-child) {
+  margin-bottom: 1.2rem;
+}
+.filter-sidebar .group .group.check label {
+  margin: 0;
+}
+.filter-sidebar .group .range-slider {
+  margin-bottom: 1.6rem;
+}
+.filter-sidebar .group .currency-block {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+.filter-sidebar .group .currency-block label {
+  margin-bottom: 0;
+}
+.filter-sidebar .group .currency-block .currency {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin: 0;
+}
+.filter-sidebar .group .currency-block .currency li:not(:last-child) {
+  margin-right: 1.2rem;
+}
+.filter-sidebar .group .currency-block .currency li.active a {
+  color: #F15427;
+}
+.filter-sidebar .group .currency-block .currency li a {
+  font-size: 1.4rem;
+  font-weight: 500;
+  color: rgba(37, 37, 37, 0.4);
+}
+.filter-sidebar .group .currency-block .currency li a:hover {
+  color: #F15427;
+}
+.filter-sidebar .double-select {
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: 1fr 4rem 1fr 4rem 1fr;
-  grid-template-columns: repeat(3, 1fr);
+  -ms-grid-columns: 1fr 1.6rem 1fr;
+  grid-template-columns: repeat(2, 1fr);
+  -webkit-column-gap: 1.6rem;
+     -moz-column-gap: 1.6rem;
+          column-gap: 1.6rem;
+}
+.filter-sidebar .scale {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+.filter-sidebar .scale span {
+  font-size: 1.2rem;
+  font-weight: 400;
+  color: rgba(37, 37, 37, 0.4);
+}
+
+.filter-heading {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin-bottom: 3.2rem;
+}
+.filter-heading h3 {
+  font-size: 2.4rem;
+  font-weight: 500;
+}
+.filter-heading a {
+  font-size: 1.6rem;
+  color: rgba(37, 37, 37, 0.5);
+}
+.filter-heading a:hover {
+  color: #F15427;
+}
+
+.catalog-heading {
+  text-align: center;
+}
+.catalog-heading h1 {
+  font-size: 4.8rem;
+  font-weight: 400;
+  margin-bottom: 3.6rem;
+}
+
+.catalog-list-heading {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin-bottom: 3.2rem;
+}
+.catalog-list-heading span {
+  font-size: 1.6rem;
+  font-weight: 400;
+}
+
+.catalog-view__switch {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+.catalog-view__switch a {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  width: 3.2rem;
+  height: 3.2rem;
+  background: rgba(85, 83, 83, 0.1);
+  border-radius: 0.4rem;
+}
+.catalog-view__switch a:not(:last-child) {
+  margin-right: 1.2rem;
+}
+.catalog-view__switch a svg use {
+  fill: rgba(85, 83, 83, 0.3);
+}
+.catalog-view__switch a.active {
+  background: rgba(81, 157, 240, 0.1);
+}
+.catalog-view__switch a.active svg use {
+  fill: #519DF0;
+}
+
+.product_list.catalog-view-tale {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: minmax(0, 1fr) 4rem minmax(0, 1fr) 4rem minmax(0, 1fr);
+  grid-template-columns: repeat(3, minmax(0, 1fr));
   gap: 4rem;
+  padding: 0;
+}
+.product_list.catalog-view-list {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: minmax(0, 1fr);
+  grid-template-columns: minmax(0, 1fr);
+  row-gap: 2.4rem;
+  padding: 0;
 }
