--- a/#source/scss/autosearch.scss
+++ b/#source/scss/autosearch.scss
@@ -15,6 +15,37 @@
 				width: 48.7%;
 				margin-bottom: 3rem;
 
+				.group-wrapper {
+					display: flex;
+					justify-content: space-between;
+
+					.price-changer {
+						margin-left: 1rem;
+
+						.price {
+							font-weight: 500;
+							font-size: 1.2rem;
+							line-height: 1.4;
+							color: #555353;
+							border: none;
+							background: none;
+							border-radius: .2rem;
+							transition: all .3s ease;
+							padding: 0 .5rem;
+							margin: 0 .15rem;
+
+							&:hover {
+								color: $blue;
+							}
+
+							&.active {
+								color: $blue;
+								border: 1px solid $blue;
+							}
+						}
+					}
+				}
+
 				label {
 					margin-bottom: 1.2rem;
 				}
@@ -39,8 +70,6 @@
 		}
 	}
 }
-
-
 
 @include respond(m-screen) {
 	.autosearch {
