--- a/css/style.css
+++ b/css/style.css
@@ -1925,6 +1925,37 @@ a:hover {
   width: 48.7%;
   margin-bottom: 3rem;
 }
+.autosearch .form-wrapper form .group .group-wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+.autosearch .form-wrapper form .group .group-wrapper .price-changer {
+  margin-left: 1rem;
+}
+.autosearch .form-wrapper form .group .group-wrapper .price-changer .price {
+  font-weight: 500;
+  font-size: 1.2rem;
+  line-height: 1.4;
+  color: #555353;
+  border: none;
+  background: none;
+  border-radius: 0.2rem;
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+  padding: 0 0.5rem;
+  margin: 0 0.15rem;
+}
+.autosearch .form-wrapper form .group .group-wrapper .price-changer .price:hover {
+  color: #519DF0;
+}
+.autosearch .form-wrapper form .group .group-wrapper .price-changer .price.active {
+  color: #519DF0;
+  border: 1px solid #519DF0;
+}
 .autosearch .form-wrapper form .group label {
   margin-bottom: 1.2rem;
 }
