--- a/#source/scss/style.scss
+++ b/#source/scss/style.scss
@@ -135,6 +135,30 @@ a {
 	}
 }
 
+.price-changer {
+	.price {
+		font-weight: 500;
+		font-size: 1.2rem;
+		line-height: 1.4;
+		color: #555353;
+		border: none;
+		background: none;
+		border-radius: .2rem;
+		transition: all .3s ease;
+		padding: 0 .5rem;
+		margin: 0 .15rem;
+
+		&:hover {
+			color: $blue;
+		}
+
+		&.active {
+			color: $blue;
+			border: 1px solid $blue;
+		}
+	}
+}
+
 
 // Connecting pages style
 @import "main-scss/header.scss";
@@ -157,3 +181,4 @@ a {
 
 @import "autosearch.scss";
 @import "products.scss";
+@import "product-full.scss";
