--- a/#source/scss/main-scss/variables.scss
+++ b/#source/scss/main-scss/variables.scss
@@ -9,6 +9,9 @@ $gray: #555353;
 $light-gray: #FAFAFA;
 $white: white;
 $blue: #519DF0;
+$bright-blue: #007AFF;
 $red: #FF2E2E;
 $violent: #4450DA;
 $orange: #F15427;
+$yellow: #F2C94C;
+$green: #29BD68;
