--- a/#source/scss/main-screen.scss
+++ b/#source/scss/main-screen.scss
@@ -23,8 +23,10 @@
 	}
 
 	.wrapper {
+		position: relative;
 		display: flex;
 		width: 100%;
+		z-index: 2;
 
 		.form-block {
 			width: 100%;
@@ -148,7 +150,7 @@
 					margin-bottom: 2rem;
 				}
 
-				h2 {	
+				h2 {
 					font-size: 2.8rem;
 				}
 			}
