--- a/#source/scss/product-card.scss
+++ b/#source/scss/product-card.scss
@@ -206,4 +206,88 @@
 			background: #007AFF;
 		}
 	}
+
+	&.view-list {
+		display: flex;
+		padding: 0.8rem;
+		border: 0.2rem solid #E2E2E2;
+		border-radius: 0.8rem;
+
+		.card-images {
+			width: 14rem;
+			height: 10.4rem;
+			flex-shrink: 0;
+			border-radius: 0.4rem;
+			overflow: hidden;
+
+			img {
+				width: 100%;
+				height: 100%;
+				object-fit: cover;
+			}
+
+			.swiper-button-next,
+			.swiper-button-prev {
+				margin-top: 0;
+				transform: translateY(-50%);
+			}
+		}
+
+		.bottom-content {
+			border: none;
+			border-radius: 0;
+			padding: .5rem 0 .5rem 1.9rem;
+			flex-grow: 1;
+
+			.block-wrapper {
+				display: grid;
+				grid-template-columns: repeat(5, minmax(0, max-content));
+				grid-template-rows: auto;
+				margin: 0;
+
+				.wrapper-item {
+					border: none;
+					margin: 0;
+					padding: 0.5rem;
+
+					p {
+						font-size: 1.6rem;
+						font-weight: 400;
+						color: $gray;
+						margin: 0;
+
+						span {
+							color: $dark;
+
+							&.medium {
+								font-weight: 500;
+							}
+
+							&.state {
+								&_excellent {
+									color: $green;
+								}
+
+								&_good {
+									color: $bright-blue;
+								}
+
+								&_average {
+									color: $yellow;
+								}
+
+								&_poor {
+									color: $orange;
+								}
+							}
+						}
+					}
+
+					.btn {
+						margin: 0;
+					}
+				}
+			}
+		}
+	}
 }
