--- a/#source/scss/products.scss
+++ b/#source/scss/products.scss
@@ -2,6 +2,7 @@
   display: grid;
   grid-template-columns: 286px 1fr;
   column-gap: 5.7rem;
+  margin-bottom: 6.4rem;
 }
 
 .filter-sidebar {
@@ -168,6 +169,12 @@
 }
 
 .product_list {
+  display: none !important;
+
+  &.active {
+    display: grid !important;
+  }
+
   &.catalog-view-tale {
     display: grid;
     grid-template-columns: repeat(3, minmax(0, 1fr));
@@ -180,5 +187,18 @@
     grid-template-columns: minmax(0, 1fr);
     row-gap: 2.4rem;
     padding: 0;
+  }
+}
+
+.popular {
+  margin-bottom: 6.4rem;
+
+  .title {
+    margin-bottom: 4.8rem;
+
+    h2 {
+      font-size: 3.2rem;
+      font-weight: 500;
+    }
   }
 }
