--- a/#source/scss/style.scss
+++ b/#source/scss/style.scss
@@ -24,6 +24,13 @@ body {
 	overflow: hidden;
 }
 
+.main-content {
+	position: relative;
+	z-index: 2;
+	background: linear-gradient(180deg, #F1F1F1 0%, #EBEBEB 22.7%, #FFFFFF 32.3%);
+	padding-top: 4rem;
+}
+
 h1,
 h2,
 h3,
@@ -157,3 +164,4 @@ a {
 
 @import "autosearch.scss";
 @import "products.scss";
+@import "comparison.scss";
