--- a/css/style.css
+++ b/css/style.css
@@ -583,6 +583,49 @@ a:hover {
   border: 1px solid #519DF0;
 }
 
+.compare {
+  bottom: 5rem;
+  right: 5rem;
+  position: fixed;
+  z-index: 100;
+}
+.compare > div {
+  background: #85BBF5;
+  border-radius: 50%;
+  padding: 1.4rem;
+  position: relative;
+}
+.compare > div span {
+  position: absolute;
+  top: 0;
+  right: -1rem;
+  background: white;
+  padding: 0.5rem 0.7rem;
+  border-radius: 50%;
+  color: #000000;
+  font-family: "Poppins";
+  line-height: 1;
+  font-weight: 500;
+  font-size: 1.2rem;
+  text-transform: uppercase;
+}
+.compare > div img {
+  width: 100%;
+  height: 100%;
+}
+@media only screen and (max-width: 991.98px) {
+  .compare {
+    bottom: 2.5rem;
+    right: 2.5rem;
+  }
+  .compare > div {
+    padding: 1rem;
+  }
+  .compare > div span {
+    right: -0.5rem;
+  }
+}
+
 .header {
   width: 100%;
   height: 12.2rem;
@@ -2293,6 +2336,7 @@ a:hover {
   font-size: 3.2rem;
   line-height: 1.375;
   color: #252525;
+  padding-right: 0.5rem;
 }
 .product-full .card-wrapper .card-text .title .img-wrapper {
   width: 4rem;
@@ -2445,6 +2489,15 @@ a:hover {
   border-radius: 1.2rem;
 }
 .product-full .card-wrapper .card-slider .equipment {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+.product-full .card-wrapper .card-slider .equipment > div {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -2753,4 +2806,389 @@ a:hover {
   line-height: 1.5;
   color: #555353;
   opacity: 0.6;
+}
+.product-full .similar-buses {
+  margin-bottom: 6.5rem;
+}
+.product-full .similar-buses .title-wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin-bottom: 4rem;
+}
+.product-full .similar-buses .title-wrapper .group.select {
+  width: 100%;
+  max-width: 26rem;
+}
+.product-full .similar-buses .bus-table .table-heder {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-bottom: 1.6rem;
+  padding: 0 0.8rem 0 0.8rem;
+}
+.product-full .similar-buses .bus-table .table-heder h5 {
+  font-weight: 400;
+  font-size: 1.6rem;
+  line-height: 1.3;
+  color: #555353;
+  padding: 0 1.6rem;
+}
+.product-full .similar-buses .bus-table .table-heder h5:nth-of-type(1) {
+  width: 7.5%;
+  padding: 0;
+}
+.product-full .similar-buses .bus-table .table-heder h5:nth-of-type(2) {
+  text-align: center;
+  width: 8%;
+}
+.product-full .similar-buses .bus-table .table-heder h5:nth-of-type(3) {
+  width: 42%;
+}
+.product-full .similar-buses .bus-table .table-heder h5:nth-of-type(4) {
+  text-align: center;
+  width: 10%;
+}
+.product-full .similar-buses .bus-table .table-heder h5:nth-of-type(5) {
+  text-align: center;
+  width: 10%;
+}
+.product-full .similar-buses .bus-table .table-heder h5:nth-of-type(6) {
+  text-align: center;
+  width: 12.5%;
+}
+.product-full .similar-buses .bus-table .table-heder h5:nth-of-type(7) {
+  text-align: end;
+  width: 10%;
+}
+.product-full .similar-buses .bus-table .table-body .table-card {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  border: 2px solid #E2E2E2;
+  border-radius: 0.4rem;
+  padding: 0.8rem;
+  margin-bottom: 1.6rem;
+}
+.product-full .similar-buses .bus-table .table-body .table-card:last-of-type {
+  margin-bottom: 0;
+}
+.product-full .similar-buses .bus-table .table-body .table-card div {
+  padding: 0 1.6rem;
+  font-weight: 500;
+  font-size: 1.6rem;
+  line-height: 1.5;
+  color: #252525;
+}
+.product-full .similar-buses .bus-table .table-body .table-card div:nth-of-type(1) {
+  padding: 0;
+  width: 7.5%;
+  height: 100%;
+  max-height: 6.4rem;
+  border-radius: 0.2rem;
+  overflow: hidden;
+}
+.product-full .similar-buses .bus-table .table-body .table-card div:nth-of-type(1) img {
+  width: 100%;
+  height: 100%;
+}
+.product-full .similar-buses .bus-table .table-body .table-card div:nth-of-type(2) {
+  text-align: center;
+  width: 8%;
+}
+.product-full .similar-buses .bus-table .table-body .table-card div:nth-of-type(3) {
+  width: 42%;
+}
+.product-full .similar-buses .bus-table .table-body .table-card div:nth-of-type(4) {
+  text-align: center;
+  width: 10%;
+}
+.product-full .similar-buses .bus-table .table-body .table-card div:nth-of-type(5) {
+  text-align: center;
+  width: 10%;
+}
+.product-full .similar-buses .bus-table .table-body .table-card div:nth-of-type(6) {
+  text-align: center;
+  width: 12.5%;
+}
+.product-full .similar-buses .bus-table .table-body .table-card div:nth-of-type(7) {
+  text-align: end;
+  width: 10%;
+}
+.product-full .similar-buses .btn {
+  margin: 0 auto;
+  margin-top: 4.8rem;
+  padding: 1.8rem 4.4rem;
+}
+
+@media only screen and (max-width: 1199.98px) {
+  .product-full .card-wrapper > div {
+    width: 50%;
+  }
+  .product-full .card-wrapper .card-slider .swiper-box {
+    max-height: 40rem;
+  }
+}
+@media only screen and (max-width: 767.98px) {
+  .product-full .card-wrapper {
+    padding-top: 2.5rem;
+    margin-bottom: 2.5rem;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+  .product-full .card-wrapper > div {
+    width: 100%;
+  }
+  .product-full .card-wrapper > div:nth-of-type(1) {
+    max-width: initial;
+    margin-right: 0;
+  }
+  .product-full .card-wrapper > div:nth-of-type(2) {
+    max-width: initial;
+  }
+  .product-full .card-wrapper .card-text .title {
+    margin-bottom: 1rem;
+  }
+  .product-full .card-wrapper .card-text .title h2 {
+    font-size: 2.6rem;
+  }
+  .product-full .card-wrapper .card-text .sub-title {
+    margin-bottom: 2rem;
+  }
+  .product-full .card-wrapper .card-text .sub-title h5 {
+    font-size: 1.6rem;
+  }
+  .product-full .card-wrapper .card-text .sub-title p {
+    font-size: 1.4rem;
+    color: #555353;
+    margin-bottom: 1.2rem;
+  }
+  .product-full .card-wrapper .card-text .info-column {
+    margin-bottom: 2rem;
+  }
+  .product-full .card-wrapper .card-text .info-column h3 {
+    font-weight: 500;
+    font-size: 1.4rem;
+    line-height: 1.5;
+    text-transform: uppercase;
+    margin-bottom: 1.5rem;
+  }
+  .product-full .card-wrapper .card-text .info-column .info-row {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    margin-bottom: 1rem;
+  }
+  .product-full .card-wrapper .card-text .info-column .info-row p {
+    font-size: 1.4rem;
+  }
+  .product-full .card-wrapper .card-text .info-column .info-row span {
+    font-size: 1.4rem;
+  }
+  .product-full .card-wrapper .card-slider .swiper-box {
+    margin-bottom: 3rem;
+  }
+  .product-full .card-wrapper .card-slider .equipment > div {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+  }
+  .product-full .card-wrapper .card-slider .equipment h3 {
+    font-size: 1.4rem;
+    margin-bottom: 1rem;
+  }
+  .product-full .card-wrapper .card-slider .equipment span {
+    width: 50%;
+    font-size: 1.4rem;
+    padding-right: 0.5rem;
+  }
+  .product-full .other-info {
+    margin-bottom: 2.5rem;
+  }
+  .product-full .other-info h3 {
+    font-size: 1.4rem;
+    margin-bottom: 1rem;
+  }
+  .product-full .other-info p {
+    font-size: 1.4rem;
+    margin-bottom: 1rem;
+  }
+  .product-full .other-info .img-wrapper {
+    margin-top: 1.5rem;
+  }
+  .product-full .btc-test .title {
+    font-size: 1.4rem;
+    margin-bottom: 3rem;
+  }
+  .product-full .btc-test .title span {
+    font-size: 1.2rem;
+  }
+  .product-full .btc-test .block-wrapper {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+  .product-full .btc-test .block-wrapper > div {
+    width: 100%;
+  }
+  .product-full .btc-test .block-wrapper > div.common-block {
+    max-width: initial;
+  }
+  .product-full .btc-test .block-wrapper > div.img-block {
+    max-width: initial;
+  }
+  .product-full .btc-test .block-wrapper .common-block .accordion-item {
+    margin-bottom: 2.5rem;
+  }
+  .product-full .btc-test .block-wrapper .common-block .accordion-item .accordion-header .right-side {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    width: 40%;
+  }
+  .product-full .btc-test .block-wrapper .common-block .accordion-item .accordion-header span,
+.product-full .btc-test .block-wrapper .common-block .accordion-item .accordion-header p {
+    font-size: 1.2rem;
+    margin-right: 0.5rem;
+  }
+  .product-full .btc-test .block-wrapper .common-block .accordion-item .accordion-header p {
+    margin-left: 0.5rem;
+  }
+  .product-full .btc-test .block-wrapper .common-block .accordion-item .accordion-header .bar-wrapper {
+    width: 35%;
+  }
+  .product-full .btc-test .block-wrapper .common-block .accordion-item .accordion-header .bar-wrapper h4 {
+    margin-bottom: 0.5rem;
+  }
+  .product-full .btc-test .block-wrapper .common-block .accordion-item .accordion-header .accordion-button {
+    width: 25%;
+    padding: 0 0 0 1rem;
+  }
+  .product-full .btc-test .block-wrapper .common-block .accordion-item .accordion-body {
+    padding-bottom: 0;
+  }
+  .product-full .btc-test .block-wrapper .img-block {
+    margin: 0 auto;
+  }
+  .product-full .btc-test .block-wrapper .img-block .img-block__top > div span {
+    font-size: 1.2rem;
+    margin-right: 0.5rem;
+  }
+  .product-full .btc-test .block-wrapper .img-block .img-block__top > div p {
+    font-size: 1.2rem;
+    margin-left: 0.5rem;
+  }
+  .product-full .btc-test .block-wrapper .img-block .img-block__bottom {
+    margin-top: 2.5rem;
+    padding: 0 7rem;
+  }
+  .product-full .btc-test .block-wrapper .img-block .img-block__bottom h5 {
+    margin-top: 1rem;
+  }
+  .product-full .similar-buses {
+    margin-bottom: 3.5rem;
+  }
+  .product-full .similar-buses .title-wrapper {
+    margin-bottom: 2rem;
+  }
+  .product-full .similar-buses .title-wrapper .group.select {
+    width: 100%;
+    max-width: 20rem;
+  }
+  .product-full .similar-buses .bus-table {
+    overflow-y: scroll;
+    padding-bottom: 1rem;
+  }
+  .product-full .similar-buses .bus-table .table-heder {
+    margin-bottom: 1rem;
+    padding: 0 0.4rem 0 0.4rem;
+    min-width: 60rem;
+  }
+  .product-full .similar-buses .bus-table .table-heder h5 {
+    font-size: 1.2rem;
+    padding: 0 0.5rem;
+  }
+  .product-full .similar-buses .bus-table .table-heder h5:nth-of-type(1) {
+    width: 10%;
+  }
+  .product-full .similar-buses .bus-table .table-heder h5:nth-of-type(2) {
+    width: 10%;
+  }
+  .product-full .similar-buses .bus-table .table-heder h5:nth-of-type(3) {
+    width: 40%;
+  }
+  .product-full .similar-buses .bus-table .table-heder h5:nth-of-type(4) {
+    width: 10%;
+  }
+  .product-full .similar-buses .bus-table .table-heder h5:nth-of-type(5) {
+    width: 10%;
+  }
+  .product-full .similar-buses .bus-table .table-heder h5:nth-of-type(6) {
+    width: 10%;
+  }
+  .product-full .similar-buses .bus-table .table-heder h5:nth-of-type(7) {
+    width: 10%;
+  }
+  .product-full .similar-buses .bus-table .table-body {
+    min-width: 60rem;
+  }
+  .product-full .similar-buses .bus-table .table-body .table-card {
+    padding: 0.4rem;
+    margin-bottom: 1rem;
+  }
+  .product-full .similar-buses .bus-table .table-body .table-card div {
+    padding: 0 0.5rem;
+    font-size: 1.2rem;
+  }
+  .product-full .similar-buses .bus-table .table-body .table-card div:nth-of-type(1) {
+    width: 10%;
+  }
+  .product-full .similar-buses .bus-table .table-body .table-card div:nth-of-type(2) {
+    width: 10%;
+  }
+  .product-full .similar-buses .bus-table .table-body .table-card div:nth-of-type(3) {
+    width: 40%;
+  }
+  .product-full .similar-buses .bus-table .table-body .table-card div:nth-of-type(4) {
+    width: 10%;
+  }
+  .product-full .similar-buses .bus-table .table-body .table-card div:nth-of-type(5) {
+    width: 10%;
+  }
+  .product-full .similar-buses .bus-table .table-body .table-card div:nth-of-type(6) {
+    width: 10%;
+  }
+  .product-full .similar-buses .bus-table .table-body .table-card div:nth-of-type(7) {
+    width: 10%;
+  }
+  .product-full .similar-buses .btn {
+    margin-top: 1.5rem;
+  }
+}
+@media only screen and (max-width: 375.98px) {
+  .product-full .card-wrapper .card-slider .swiper-box {
+    max-height: 30rem;
+  }
 }
