--- a/#source/scss/comparison.scss
+++ b/#source/scss/comparison.scss
@@ -1,180 +1,244 @@
 .comparison {
-  margin-top: 4.8rem;
+	margin-top: 4.8rem;
 
-  h1 {
-    font-size: 4.8rem;
-    font-weight: 500;
-  }
+	h1 {
+		font-size: 4.8rem;
+		font-weight: 500;
+	}
 
-  .comparison-cards {
-    .item {
-      &.product-card {
-        padding: 0 2rem;
-        display: flex;
-        flex-direction: column;
+	.comparison-cards {
+		.item {
+			&.product-card {
+				display: flex;
+				flex-direction: column;
 
-        .card-images {
-          width: 100%;
-          height: 20rem;
-          flex-grow: 1;
+				.card-images {
+					width: 100%;
+					height: 20rem;
+					flex-grow: 1;
 
-          .swiper-slide {
-            border-radius: 1.2rem 1.2rem 0 0;
-            overflow: hidden;
+					.swiper-slide {
+						border-radius: 1.2rem 1.2rem 0 0;
+						overflow: hidden;
 
-            img {
-              width: 100%;
-              height: 100%;
-              object-fit: cover;
-            }
-          }
-        }
+						img {
+							width: 100%;
+							height: 100%;
+							object-fit: cover;
+						}
+					}
+				}
 
-        .bottom-content {
-          flex-grow: 1;
+				.bottom-content {
+					flex-grow: 1;
 
-          .block-wrapper {
-            margin: 0;
+					.block-wrapper {
+						margin: 0;
 
-            .img-wrapper {
-              background: $blue;
+						.img-wrapper {
+							background: $blue;
 
-              svg {
-                use {
-                  fill: $white;
-                }
-              }
-            }
-          }
-        }
-      }
-    }
+							svg {
+								use {
+									fill: $white;
+								}
+							}
+						}
+					}
+				}
+			}
+		}
 
-  }
-
+	}
 }
 
 .matrix {
-  display: grid;
-  grid-template-columns: 34.6rem minmax(0, 1fr);
+	display: grid;
+	grid-template-columns: 34.6rem minmax(0, 1fr);
 
-  .item {
-    position: relative;
-    padding: 1rem;
-    font-size: 1.6rem;
-    font-weight: 400;
-    box-shadow: inset 0 1px 0 0 #e9e9e9;
-    word-wrap: break-word;
-    min-height: 3.6rem;
+	.item {
+		position: relative;
+		padding: 1rem;
+		font-size: 1.6rem;
+		line-height: 1.2;
+		font-weight: 400;
+		box-shadow: inset 0 1px 0 0 #e9e9e9;
+		word-wrap: break-word;
+		min-height: 3.6rem;
 
-    &.group-title {
-      background: none !important;
-      padding: 6.4rem 1rem 3.2rem;
-      font-size: 2rem;
-      font-weight: 500;
-    }
+		&.group-title {
+			background: none !important;
+			padding: 6.4rem 1rem 3.2rem;
+			font-size: 2rem;
+			font-weight: 500;
+		}
 
-    &:first-child {
-      box-shadow: none;
-    }
+		&:first-child {
+			box-shadow: none;
+		}
 
-    &:last-child {
-      box-shadow: inset 0 1px 0 0 #e9e9e9, inset 0 -1px 0 0 #e9e9e9;
-    }
-  }
+		&:last-child {
+			box-shadow: inset 0 1px 0 0 #e9e9e9, inset 0 -1px 0 0 #e9e9e9;
+		}
+	}
 
-  .matrix-head {
-    margin-bottom: 4rem;
+	.matrix-head {
+		margin-bottom: 4rem;
 
-    .item {
-      width: 100%;
-      height: 31.6rem;
-      box-shadow: none;
-      padding: 0;
-    }
+		.item {
+			width: 100%;
+			height: 31.6rem;
+			box-shadow: none;
+			padding: 0;
+		}
 
-    .add {
-      width: 100%;
-      height: 100%;
-      text-align: center;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      flex-direction: column;
-      border: 2px solid #E2E2E2;
-      border-radius: 12px;
+		.add {
+			width: 100%;
+			height: 100%;
+			text-align: center;
+			display: flex;
+			align-items: center;
+			justify-content: center;
+			flex-direction: column;
+			border: 2px solid #E2E2E2;
+			border-radius: 12px;
 
-      span {
-        display: inline-block;
-        font-size: 1.4rem;
-        font-weight: 400;
-        line-height: 1.5;
-        margin-top: 2.4rem;
-      }
-    }
-  }
+			span {
+				display: inline-block;
+				font-size: 1.4rem;
+				font-weight: 400;
+				line-height: 1.5;
+				margin-top: 2.4rem;
+			}
+		}
+	}
 
-  .column-left {
-    .matrix-head {
-      padding-right: 2rem;
-    }
-  }
+	.column-left {
+		.matrix-head {
+			padding-right: 2rem;
+		}
+	}
 
-  .column-right {
-    .matrix-head {
-      position: relative;
+	.column-right {
+		.matrix-head {
+			position: relative;
 
-      .swiper-scrollbar {
-        bottom: -3.5rem;
-        height: 0.8rem;
-        background: rgba(#E2E2E2, 0.5);
+			.swiper-scrollbar {
+				bottom: -3.5rem;
+				height: 0.8rem;
+				background: rgba(#E2E2E2, 0.5);
 
-        .swiper-scrollbar-drag {
-          background: $blue;
-        }
-      }
-    }
+				.swiper-scrollbar-drag {
+					background: $blue;
+				}
+			}
+		}
 
-    .comparison-cards {
-      .product-card {
-        .card-images {}
-      }
-    }
+		.comparison-cards {
+			.product-card {
+				.bottom-content {
+					.block-wrapper {
+						&:last-of-type {
+							flex-wrap: wrap;
+							margin-top: 1rem;
+						}
 
-    .comparison-data {
-      .swiper-slide {
-        &:nth-of-type(odd) {
-          .item {
-            background: $white;
-          }
+						h5,
+						button,
+						a {
+							margin-top: 1rem;
+						}
+					}
+				}
+			}
+		}
 
-        }
-      }
-    }
-  }
+		.comparison-data {
+			.swiper-slide {
+				&:nth-of-type(odd) {
+					.item {
+						background: $white;
+					}
+
+				}
+			}
+		}
+	}
 }
 
 .btc_test {
-  text-align: center;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-  padding: 5.4rem 0;
+	text-align: center;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	flex-direction: column;
+	padding: 5.4rem 0;
 
-  img {
-    display: inline-block;
-  }
+	img {
+		display: inline-block;
+	}
 
-  a {
-    display: inline-block;
-    font-size: 1.4rem;
-    font-weight: 400;
-    color: $blue;
-    margin-top: 1.6rem;
+	a {
+		display: inline-block;
+		font-size: 1.4rem;
+		font-weight: 400;
+		color: $blue;
+		margin-top: 1.6rem;
 
-    &:hover {
-      color: $orange;
-    }
-  }
+		&:hover {
+			color: $orange;
+		}
+	}
+}
+
+@include respond(m-screen) {
+	.matrix {
+		grid-template-columns: 25rem minmax(0, 1fr);
+
+		.matrix-head {
+			.item {
+				height: 25rem;
+			}
+		}
+	}
+}
+
+@include respond(s-screen) {
+	.matrix {
+		grid-template-columns: 20rem minmax(0, 1fr);
+
+		.item {
+			font-size: 1.4rem;
+			padding: .8rem;
+			min-height: auto;
+
+			&.group-title {
+				font-size: 1.6rem;
+				padding: 2rem 1rem 2rem;
+			}
+		}
+
+		.m-w-100 {
+			grid-column-start: 1;
+			grid-column-end: -1;
+		}
+
+		.column-left {
+			.matrix-head {
+				padding-right: 0;
+				margin-bottom: 2rem;
+
+				.item {
+					width: 100%;
+					max-width: 25rem;
+					height: 15rem;
+					margin: 0 auto;
+				}
+			}
+		}
+
+		.matrix-head {
+			margin-bottom: 4rem;
+		}
+	}
 }
